--- a/vinhdnqph26105_assignment/index.html
+++ b/vinhdnqph26105_assignment/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="./css/base.css">
     <title>Assignment GĐ01</title>
 </head>
 
@@ -34,7 +34,7 @@
                     </li>
                     |
                     <li>
-                        <a href="#">
+                        <a href="signup.html">
                             Đăng ký
                         </a>
                     </li>
@@ -47,7 +47,7 @@
         <nav id="nav">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="index.html">
                         Trang chủ
                     </a>
                 </li>
@@ -59,7 +59,7 @@
                 </li>
                 |
                 <li>
-                    <a href="#">
+                    <a href="quickbuy.html">
                         Mua hàng nhanh
                     </a>
                 </li>
@@ -119,7 +119,7 @@
         </footer>
     </div>
 
-    <script src="main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
