update -- add lab 7

--- a/vinhdnqph26105_assignment/signup.html
+++ b/vinhdnqph26105_assignment/signup.html
@@ -57,7 +57,7 @@
         <!-- Sign Up Box -->
         <div id="signup-box">
             <h1 class="signup-heading">Đăng ký thành viên</h1>
-            <form id="signup-form" action="">
+            <form id="signup-form" action="" method="get">
                 <div class="form-group">
                     <label for="student-id">Mã sinh viên</label>
                     <input type="text" id="student-id" name="student-id" class="form-control" placeholder="VD: PH26105">
@@ -124,10 +124,10 @@
                 <button id="signup-button" type="submit">Đăng ký</button>
                 <div class="clear"></div>
             </form>
+            <div class="data-form"></div>
         </div>
 
-        <div class="data-form"></div>
-        
+
         <!-- Footer -->
         <footer>
             <h1>
