update -- final assignment web1042

--- a/vinhdnqph26105_assignment/quickbuy.html
+++ b/vinhdnqph26105_assignment/quickbuy.html
@@ -57,7 +57,7 @@
 
         <!-- Tabel -->
         <div id="table-box">
-            <form action="" class="signup-form" onsubmit="printNotification()">
+            <form action="" class="signup-form" method="post" onsubmit="printNotification()">
                 <h1 class="signup-heading">Mua hàng nhanh</h1>
                 <table width="100%" border="5">
                 </table>
