--- a/vinhdnqph26105_assignment/signup.html
+++ b/vinhdnqph26105_assignment/signup.html
@@ -57,7 +57,7 @@
         <!-- Sign Up Box -->
         <div id="signup-box">
             <h1 class="signup-heading">Đăng ký thành viên</h1>
-            <form id="signup-form" action="" method="get">
+            <form id="signup-form" action="" method="post">
                 <div class="form-group">
                     <label for="student-id">Mã sinh viên</label>
                     <input type="text" id="student-id" name="student-id" class="form-control" placeholder="VD: PH26105">
