update -- add test 2

--- a/test1/bai2.html
+++ b/test1/bai2.html
@@ -152,7 +152,7 @@
             isValidateArr.push(isName);
 
             // Check email
-            var regEmail = /^\w+@\w+.\w+/;
+            var regEmail = /^\w+@\w+.\w+$/;
             var emailElement = document.querySelector('input[name="email"]');
             var isEmail = true;
             var errorMessageEmail = emailElement.parentElement.querySelector('span');
