--- a/test2/bai2.html
+++ b/test2/bai2.html
@@ -105,7 +105,7 @@
             validate();
         }
         var regEmail = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
-        var regPhone = /^0\d(9)$/;
+        var regPhone = /^0\d{9}$/;
         var courses = document.querySelector('#courses');
         var hocphi = document.querySelector('#hocphi');
         courses.onchange = function() {
